[package]
name = "wonderful-idlelike"
version = "0.1.0"
authors = ["D <dusty@isperldead.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amethyst = { version = "0.15.3", features = ["empty", "network"]}
amethyst_network = "0.15.3" 
log = { version = "0.4", features = ["std", "serde"] }

