[package]
name = "wonderful-idlelike"
version = "0.1.0"
authors = ["D <dusty@isperldead.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-web = "3"	
actix-web-actors = "3"
specs = "0.16.1"	
specs-derive = "0.4.1"