[package]
name = "wonderful-idlelike"
version = "0.1.0"
authors = ["D <dusty@isperldead.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.4.0", default-features = false }
bevy_prototype_simple_net = { path = "lib/bevy_prototype_simple_net", version = "0.1" }
